<resources>
    <string name="app_name" translatable="false">Beer Jump</string>
    <string name="play">Play</string>
    <string name="highscore">Highscore</string>
    <string name="score">Score</string>
    <string name="promille">Alcohol level</string>
    <string name="settings">Settings</string>
    <string name="rank_name"># Name</string>
    <string name="name">Name</string>
    <string name="back_to_menu">back to menu</string>
    <string name="reset_data">Reset data</string>
    <string name="reset_data_confirm">Do you really want to reset the data? All your local settings and highscores will be lost.</string>
    <string name="data_resetted">Data has been reset</string>
    <string name="game_score">Game Score</string>
    <string name="ok">OK!</string>
    <string name="tunnel">Tunnel</string>
    <string name="eingabe">Input</string>
    <string name="touch">Touch</string>
    <string name="sensor">Sensor</string>
    <string name="about">About us</string>
    <string name="developed">Planned and developed by</string>
    <string name="published">Published by</string>
    <string name="nils_mathys" translatable="false">Nils Mathys</string>
    <string name="leo_meier" translatable="false">Leo Meier</string>
    <string name="dominic_gisler" translatable="false">Dominic Gisler</string>
    <string name="gisler_software" translatable="false">Gisler Software</string>
    <string name="icons">Used icons from</string>
    <string name="good_ware" translatable="false">Good Ware (flaticon.com/authors/good-ware)</string>
    <string name="freepik" translatable="false">Freepik (flaticon.com/authors/freepik)</string>
    <string name="game_paused">Game paused</string>
    <string name="resume_game">Resume game</string>
    <string name="end_game">End game</string>
    <string name="pause">Pause</string>
    <string name="local">Local</string>
    <string name="global">Global</string>
    <string name="name_empty_error">Name must not be empty</string>
    <string name="rate_title">Rate Beer Jump</string>
    <string name="rate_description">Would you take a moment to rate Beer Jump if you like it? It won\'t take more than a minute. Thank you for your support!</string>
    <string name="rate_now">Rate it now</string>
    <string name="no_thanks">No, thanks</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="statistics">Statistics</string>
    <string name="app_started">App started</string>
    <string name="games_played">Games played</string>
    <string name="default_bars_jumped_on">Default bars jumped on</string>
    <string name="horizontal_moving_bars">Horizontal moving bars</string>
    <string name="vertical_moving_bars">Vertical moving bars</string>
    <string name="disappearing_bars">Disappearing bars</string>
    <string name="teleporting_bars">Teleporting bars</string>
    <string name="beers_drunk">Beers drunk</string>
    <string name="shots_drunk">Shots drunk</string>
    <string name="rockets_used">Rockets used</string>
    <string name="total_duration">Total duration</string>
    <string name="longest_duration">Longest duration</string>
    <string name="last_duration">Last duration</string>
    <string name="highest_score">Highest score</string>
    <string name="last_score">Last score</string>
    <string name="highest_promille">Highest alcohol level</string>
    <string name="last_promille">Last alcohol level</string>
    <string name="falls">Falls</string>
    <string name="cancelled_games">Cancelled games</string>
    <string name="enter">Enter</string>
    <string name="skip">Skip</string>
    <string name="info">Info</string>
    <string name="data_privacy">Data privacy</string>
    <string name="update_title">Update available</string>
    <string name="update_description">A new update for Beer Jump is available.\nInstalled version: %s\nLatest version: %s\n\nWould you like to update?</string>
    <string name="update_now">Update it now</string>
    <string name="total">Total</string>
    <string name="average">Average</string>
    <string name="change_player">Change character</string>
</resources>