<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/highscore"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/highscore"
        android:textAlignment="center"
        android:textSize="42sp"
        android:textColor="@color/textDark"
        app:layout_constraintBottom_toTopOf="@id/highscoreTabs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/highscoreTabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle"
        app:tabTextColor="@color/textDark">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabGlobal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/global" />

    </com.google.android.material.tabs.TabLayout>

    <TextView
        android:id="@+id/textUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/rank_name"
        android:textAlignment="textStart"
        android:textSize="18sp"
        android:textColor="@color/textDark"
        app:layout_constraintEnd_toStartOf="@id/textPromille"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/highscoreTabs" />

    <TextView
        android:id="@+id/textPromille"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/promille"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/textDark"
        app:layout_constraintEnd_toStartOf="@id/textScore"
        app:layout_constraintStart_toEndOf="@id/textUsername"
        app:layout_constraintTop_toBottomOf="@id/highscoreTabs" />

    <TextView
        android:id="@+id/textScore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/score"
        android:textAlignment="textEnd"
        android:textSize="18sp"
        android:textColor="@color/textDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textPromille"
        app:layout_constraintTop_toBottomOf="@id/highscoreTabs" />

    <ListView
        android:id="@+id/highscoreList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttonMenu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPromille" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/buttonMenu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/highscoreTabs" />

    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/back_to_menu"
        android:textColor="@color/textDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highscoreList"
        android:backgroundTint="@color/colorAccent" />

</androidx.constraintlayout.widget.ConstraintLayout>