<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@+id/textTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/about"
        android:textAlignment="center"
        android:textSize="42sp"
        android:textColor="@color/textDark"
        app:layout_constraintBottom_toTopOf="@id/aboutScrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ScrollView
        android:id="@+id/aboutScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/buttonData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textDeveloped"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/developed"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/textDark"
                app:layout_constraintBottom_toTopOf="@id/textNils"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textNils"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/nils_mathys"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/textDark"
                app:layout_constraintBottom_toTopOf="@id/textLeo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textDeveloped" />

            <TextView
                android:id="@+id/textLeo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/leo_meier"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/textDark"
                app:layout_constraintBottom_toTopOf="@id/textDominic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textNils" />

            <TextView
                android:id="@+id/textDominic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/dominic_gisler"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/textDark"
                app:layout_constraintBottom_toTopOf="@id/textPublished"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textLeo" />

            <TextView
                android:id="@+id/textPublished"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/published"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/textDark"
                app:layout_constraintBottom_toTopOf="@id/textGislerSoftware"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textDominic" />

            <TextView
                android:id="@+id/textGislerSoftware"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/gisler_software"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/textDark"
                app:layout_constraintBottom_toTopOf="@id/textIcons"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textPublished" />

            <TextView
                android:id="@+id/textIcons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/icons"
                android:textAlignment="center"
                android:textSize="22sp"
                android:textColor="@color/textDark"
                app:layout_constraintBottom_toTopOf="@id/textGoodWare"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textGislerSoftware" />

            <TextView
                android:id="@+id/textGoodWare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/good_ware"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/textDark"
                app:layout_constraintBottom_toTopOf="@id/textFreepik"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textIcons" />

            <TextView
                android:id="@+id/textFreepik"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/freepik"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textColor="@color/textDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textGoodWare" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/buttonData"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/data_privacy"
        android:textColor="@color/textDark"
        app:layout_constraintBottom_toTopOf="@id/buttonMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/aboutScrollView"
        android:backgroundTint="@color/colorAccent" />

    <Button
        android:id="@+id/buttonMenu"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/back_to_menu"
        android:textColor="@color/textDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonData"
        android:backgroundTint="@color/colorAccent" />

</androidx.constraintlayout.widget.ConstraintLayout>